# AtomDev

./: README.md  installer.iss  makefile  project.mk  pyproject.toml
.run/: build-installer.run.xml  clean.run.xml
atomdev/: main.py  project.py
atomdev/application/: app.py
atomdev/application/resources/: resources_rc.py
atomdev/controller/: catalogue.py  catalogue_searcher.py  dashboard.py  setting_controller.py
atomdev/domain/: data.py
atomdev/model/: catalogue.py  catalogue_searcher.py  dashboard.py  devliz_update.py
atomdev/view/: catalogue.py  catalogue_imp_dialog.py  catalogue_imp_tab_details.py  catalogue_imp_tab_directories.py  catalogue_imp_tabs.py  catalogue_searcher.py  dashboard.py  setting.py  splash.py
atomdev/view/util/: frame.py  setting.py
devliz/: project.py
devliz/application/resources/: resources_rc.py
devliz/controller/: catalogue_searcher.py
devliz/model/: catalogue_searcher.py
devliz/view/: catalogue_searcher.py
