[project]
name = "atomdev"
version = "0.1.5"
description = "Add your description here"
requires-python = ">=3.12"
authors = [
    {name = "Gabliz", email = "gabliz.dev@gmail.com"},
]
dependencies = [
    "loguru>=0.7.3",
    "loguru-logging-intercept>=0.1.5",
    "pylizlib>=0.3.20",
    "pyside6>=6.10.0",
    "pyside6-fluent-widgets[full]>=1.9.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["atomdev*"]


[project.optional-dependencies]
qtfw = [
    "pylizlib>=0.3.21",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
    "ruff>=0.14.1",
]
